--- a/css/estilos.css
+++ b/css/estilos.css
@@ -164,6 +164,7 @@ body {
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
     overflow: hidden;
+    /* margin: 0 auto; */
 }
 
 .knowledge__container {
@@ -185,6 +186,7 @@ body {
 
 .knowledge__img {
     width: 100%;
+    /* height: 20%; */
     display: block;
 }
 
