--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,7 @@ body {
     padding: var(--pading-container);
 }
 
+/*- - - - - H E R O - - - - - */
 .hero {
     width: 100%;
     height: 100vh;
@@ -34,7 +35,11 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url(../images/fondohero.jpg);
+    background-image: linear-gradient(#e2a8a875 0%, #aa69697c 100%), url(../images/fondohero.jpg);
+    /* background-image: url(../images/fondohero.jpg); */
+    background-position: center center;
+    background-position: center 70%;
+    background-repeat: no-repeat;
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
     z-index: -1;
@@ -100,17 +105,24 @@ body {
 
 .hero__title {
     font-size: 2.2rem;
+    text-transform: uppercase;
 }
 
 .hero__paragraph {
     margin-bottom: 20px;
+    color: #000;
+    width: auto;
+    padding: 0.5rem;
+    border-radius: 5rem;
 }
 
 .cta {
     display: inline-block;
-    background-color: #2091F9;
+    background-color: palevioletred;
     justify-self: center;
     color: #fff;
+    text-transform: uppercase;
+    /* color: rgb(22, 11, 15); */
     text-decoration: none;
     padding: 13px 30px;
     border-radius: 32px;
@@ -122,11 +134,16 @@ body {
 .about {
     text-align: center;
 }
-
+.about__title {
+    color: palevioletred;
+}
 .subtitle {
     color: var(--color-title);
     font-size: 2rem;
     margin-bottom: 25px;
+    color: rgb(150, 76, 150);
+    color: palevioletred;
+    text-transform: uppercase;
 }
 
 .about__parahraph {
@@ -153,18 +170,17 @@ body {
 }
 
 .about__icon {
-    width: 40px;
+    width: 5rem;
 }
 
 /*- - - - K N O W L E D G E - - - - - */
 
 .knowledge {
     background-color: #e5e5f7;
-    background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
-    background-size: 20px 20px;
+     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
+    margin: 0 auto;
     overflow: hidden;
-    /* margin: 0 auto; */
 }
 
 .knowledge__container {
@@ -177,6 +193,7 @@ body {
 
 .knowledge__picture {
     max-width: 500px;
+    margin: 0 0 0 auto;
 }
 
 .knowledge__paragraph {
@@ -187,7 +204,8 @@ body {
 .knowledge__img {
     width: 100%;
     /* height: 20%; */
-    display: block;
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* - - - - P R I C E - - - - - */
@@ -214,18 +232,18 @@ body {
     --color-plan: #696871;
     --color-price: #1d293f;
     --bg-cta: #fff;
-    --color-cta: #5454d4;
+    --color-cta: palevioletred;
     --color-items: #697871;
 }
 
 .price__element--best {
     width: 370px;
     padding: 60px 40px;
-    background-color: #FF7143;
+    background-color: palevioletred;
     --color-plan: rgb(255 255 255 / 75%);
     --color-price: #fff;
-    --bg-cta: #9F3919;
-    --color-cta: #FFF;
+    --bg-cta: #ffffffd5;
+    --color-cta: palevioletred;
     --color-items: #FFF;
 }
 
@@ -310,7 +328,7 @@ body {
 }
 
 .testimony__course {
-    background-color: royalblue;
+    background-color: palevioletred;
     color: #fff;
     display: inline-block;
     padding: 5px;
@@ -338,7 +356,7 @@ body {
 .questions__padding {
     padding: 0;
     transition: padding .3s;
-    border: 1px solid #5454D4;
+    border: 1px solid palevioletred;
     border-radius: 6px;
 }
 
@@ -363,7 +381,7 @@ body {
 
 .questions__arrow {
     border-radius: 50%;
-    background-color: var(--color-title);
+    background-color: palevioletred;
     width: 25px;
     height: 25px;
     display: flex;
@@ -393,15 +411,79 @@ body {
     margin-bottom: 30px;
 }
 
+/* - - - B O T O N D E S U B I R - - -*/
+
+.go-top-container {
+    position: fixed;
+    bottom: -3rem;
+    right: -3rem;
+    width: 6.6rem;
+    height: 6.6rem;
+    z-index: -1;
+}
+
+.go-top-button {
+    width: 0rem;
+    height: 0rem;
+    background: palevioletred;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: .2s;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.go-top-button i {
+    position: absolute;
+    font-size: 1.7rem;
+    top: 48%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    color: white;
+    transition: .2s;
+}
+
+.show {
+    z-index: 10;
+}
+
+.show .go-top-button {
+    animation: popup .3s ease-in-out;
+    width: 3.6rem;
+    height: 3.6rem;
+    z-index: 11;
+}
+
+.show i {
+    transform: translate(-50%, -50%) scale(1);
+
+}
+
+@keyframes popup{
+    0% {
+        width: 0rem;
+        height: 0rem;
+    }
+    50%{
+        width: 8rem;
+        height: 8rem;
+    }
+    100%{
+        width: 6.6rem;
+        height: 6.6rem;
+    }
+}
 /*- - - - - F O O T E R - - - - - */
 
 .footer {
-    background-color: #1D293F;
+    background-color: rgb(150, 76, 150);
 }
 
 .footer__title {
     font-weight: 300;
-    font-size: 2rem;
+    font-size: 2rem; 
     margin-bottom: 30px;
 }
 
@@ -455,7 +537,7 @@ body {
     display: inline-block;
     height: 50px;
     padding: 0 20px;
-    background-color: #2091F9;
+    background-color: palevioletred;
     border: none;
     font-size: 1rem;
     color: #fff;
