--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,9 +13,13 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+main {
+    min-width: 600px}
 .container {
     width: 90%;
     max-width: 1200px;
+    /*---------------------------------------------------------------------------------------------------*/
+    min-width: 600px;
     margin: 0 auto;
     overflow: hidden;
     padding: var(--pading-container);
@@ -169,6 +173,7 @@ main {
     gap: 1.5rem;
     overflow: hidden;
     grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+    grid-template-rows: auto;
 }
 
 .about__icons {
@@ -187,6 +192,7 @@ main {
 /*- - - - K N O W L E D G E - - - - - */
 
 .knowledge {
+    min-width: 600px;
     background-color: #e5e5f7;
      background-size: 20px 20px;
     background-position: 0 0,10px 10px;
@@ -216,7 +222,7 @@ main {
     width: 100%;
     /* height: 20%; */
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     border-radius: 5rem;
 
 }
@@ -513,6 +519,8 @@ main {
 
 .footer {
     background-color: palevioletred;
+    width: 100%;
+    /* min-width: 60rem; */
 }
 
 .footer__title {
@@ -565,7 +573,29 @@ main {
 .footer__img {
     width: 30px;
 }
+footer {
+    min-width: 100vh;
+}
 
+.footer__container {
+    flex-wrap: wrap;
+}
+.nav--footer {
+    width: 90%;
+    justify-items: center;
+}
+.nav__link--footer {
+    width: 100%;
+    justify-content: space-evenly;
+    margin: 0;
+}
+.footer__form {
+    width: 100%;
+    justify-content: space-evenly;
+}
+.footer__input {
+    flex: 1;
+}
 
 /*- - - - M e r i a   Q u e r i e s - - - - */
 
@@ -607,19 +637,20 @@ main {
     .about__main {
         gap: 2em;
     }
-    .about__icons:last-of-type {
-        grid-column: 1/-1;
-    }
-    
     .knowledge__container{
         grid-template-columns: 1fr;
         grid-template-rows: max-content 1fr;
         gap: 3em;
         text-align: center;
+        margin: 0 auto;
     }
     .knowledge__picture {
         grid-row: 1/2;
         justify-self: center;
+        margin: 0 auto;
+    }
+    .knowledge__img {
+        margin-left: 0px;
     }
     .testimony__container {
         grid-template-columns: 30px 1fr 30px;
@@ -640,27 +671,8 @@ main {
     .questions__copy {
         width: 100%;
     }
-    .footer__container {
-        flex-wrap: wrap;
-    }
-    .nav--footer {
-        width: 100%;
-        justify-items: center;
-    }
-    .nav__link--footer {
-        width: 100%;
-        justify-content: space-evenly;
-        margin: 0;
-    }
-    .footer__form {
-        width: 100%;
-        justify-content: space-evenly;
-    }
-    .footer__input {
-        flex: 1;
-    }
 }
-
+    /* - - - - - M E D I A  6 0 0 P X - - - - -*/
 @media (max-width:600px) {
     .hero__title {
         font-size: 2rem;
@@ -702,25 +714,20 @@ main {
         margin-bottom: 40px;
     }
     .footer__title {
-        justify-self: start;
+        justify-self: center;
         margin-bottom: 15px;
     }
     .nav--footer {
         padding-bottom: 60px;
     }
     .nav__link--footer {
-        justify-content: space-between;
+        justify-content: space-around;
     }
-    .footer__inputs {
-        flex-wrap: wrap;
+    .footer__container {
+        margin-bottom: 0;
+        padding: 0;
     }
-    .footer__input {
-        flex-basis: 100%;
-        margin: 0;
-        margin-bottom: 16px;
-    }
-    .footer__submit {
-        margin: 0;
-        width: 100%;
-    }
+    /* main {
+        background-color: palegreen;
+    } */
 }
