--- a/css/modal.css
+++ b/css/modal.css
@@ -469,6 +469,41 @@
 @media screen and (max-width:800px) {
     .content-modal--semipermanente{
         width: 90%;
+        text-align: start;
+        /* justify-content: start; */
     }
+    .container-modal--semipermanente {
+        height: 100%;
+        /* background-color: rgb(182, 111, 111); */
+    }
+    .content-modal--acrilicas{
+        width: 90%;
+        text-align: start;
+    }
+    .container-modal--acrilicas {
+        height: 100%;
+    }
+    .content-modal--pestanas{
+        width: 90%;
+        text-align: start;
+    }
+    .container-modal--pestanas {
+        height: 100%;
+    }
+    .content-modal--polygel{
+        width: 90%;
+        text-align: start;
+    }
+    .container-modal--polygel {
+        height: 100%;
+    }
+    .content-modal{
+        width: 90%;
+        text-align: start;
+    }
+    .container-modal {
+        height: 100%;
+    }
+
 }
 /*:::Fin Ventana Modal:::*/
