--- a/css/estilos.css
+++ b/css/estilos.css
@@ -193,7 +193,7 @@ main {
 
 .knowledge {
     min-width: 600px;
-    background-color: #e5e5f7;
+    background-color: #fff;
      background-size: 20px 20px;
     background-position: 0 0,10px 10px;
     margin: 0 auto;
