--- a/css/estilos.css
+++ b/css/estilos.css
@@ -690,10 +690,6 @@ main {
         width: 6rem;
         height: 6rem;
     }
-    /* .boton-modal--semipermanente label {
-        font-size: 2rem;
-    } */
-
 
 }
     /* - - - - - M E D I A  6 0 0 P X - - - - -*/
@@ -750,6 +746,7 @@ main {
     .footer__container {
         margin-bottom: 0;
         padding: 0;
+        padding-top: 3rem;
     }
     .testimony__container {
         grid-template-columns: 50px 1fr 50px;
