--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,6 +83,9 @@ main {
     color: #fff;
     text-decoration: none;
 }
+.nav__links:hover {
+    border-bottom: 1px solid white;
+}
 
 .nav__menu {
     margin-left: auto;
@@ -234,15 +237,22 @@ main {
     text-align: center;
 }
 
-.price__table {
+/* .price__table {
     padding-top: 60px;
     display: flex;
     flex-wrap: wrap;
     gap: 2.5em;
     justify-content: space-evenly;
     align-items: center;
+} */
+.price__table {
+    padding-top: 60px;
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(330px, 1fr) );
+    grid-template-rows: auto;
+    gap: 5rem;
+    place-items: center;
 }
-
 .price__element {
     background-color: rgb(255, 157, 190);
     text-align: center;
@@ -255,6 +265,15 @@ main {
     --color-cta: rgb(0, 0, 0);
     --color-items: #ffffff;
     font-weight: bold;
+    box-shadow: -1px 8px 17px 2px rgba(166,163,163,0.89);
+-webkit-box-shadow: -1px 8px 17px 2px rgba(166,163,163,0.89);
+-moz-box-shadow: -1px 8px 17px 2px rgba(166,163,163,0.89);
+}
+.price__element--color {
+    background-color: rgb(218, 173, 214);
+}
+.price__element--cocolor {
+    background-color: violet;
 }
 .price__element--best {
     width: 370px;
@@ -302,6 +321,11 @@ main {
     text-transform: uppercase;
     color: var(--color-cta);
     box-shadow: 0 0 1px rgba(0, 0, 0, .5);
+}
+.price__cta:hover {
+    color: palevioletred;
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out;
 }
 .price__signo {
     font-size: 1.5rem;
