--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,13 +13,13 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
-main {
-    min-width: 600px}
+/* main {
+    min-width: 600px} */
 .container {
     width: 90%;
     max-width: 1200px;
     /*---------------------------------------------------------------------------------------------------*/
-    min-width: 600px;
+    /* min-width: 600px; */
     margin: 0 auto;
     overflow: hidden;
     padding: var(--pading-container);
@@ -29,7 +29,7 @@ main {
 .hero {
     width: 100%;
     height: 100vh;
-    min-width: 600px;
+    /* min-width: 600px; */
     max-height: 800px;
     position: relative;
     display: grid;
@@ -195,7 +195,7 @@ main {
 /*- - - - K N O W L E D G E - - - - - */
 
 .knowledge {
-    min-width: 600px;
+    /* min-width: 600px; */
     background-color: #fff;
      background-size: 20px 20px;
     background-position: 0 0,10px 10px;
@@ -772,3 +772,68 @@ main {
         grid-template-columns: 50px 1fr 50px;
     }
 }
+
+
+    /* - - - - - M E D I A  3 0 0 P X - - - - -*/
+    @media (max-width:300px) {
+        html {
+            width: 100vh;
+        }
+        .hero__title {
+            font-size: 2rem;
+        }
+        .hero__paragraph {
+            font-size: 1rem;
+        }
+        .hero::before {
+            background-position: center center;
+        }
+        .subtitle {
+            font-size: 1.8rem;
+        }
+        .price__element {
+            width: 90%;
+        }
+        .price__element--best {
+            width: 90%;
+            padding: 40px;
+        }
+        .plan__price {
+            font-size: 2rem;
+        }
+        .testimony {
+            --pading-container: 60px 0;
+        }
+        .testimony__container {
+            grid-template-columns: 28px 1fr 28px;
+            gap: .9em;
+        }
+        .testimony__arrow {
+            width: 100%;
+        }
+        .testimony__course {
+            margin-top: 15px;
+        }
+        .questions__title {
+            font-size: 1rem;
+        }
+        .nav--footer {
+            padding: 0;
+            margin-bottom: 40px;
+        }
+        .footer__title {
+            justify-self: center;
+            margin-bottom: 15px;
+        }
+        .nav--footer {
+            padding-bottom: 60px;
+        }
+        .footer__container {
+            margin-bottom: 0;
+            padding: 0;
+            padding-top: 3rem;
+        }
+        .testimony__container {
+            grid-template-columns: 50px 1fr 50px;
+        }
+    }
