--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@ body {
     min-width: 600px} */
 .container {
     width: 90%;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     /*---------------------------------------------------------------------------------------------------*/
     /* min-width: 600px; */
     margin: 0 auto;
@@ -105,7 +105,7 @@ body {
 /*- - - - - H E R O   CONTAINER- - - - -*/
 
 .hero__container {
-    max-width: 800px;
+    /* max-width: 800px; */
     --padding-container: 0;
     display: grid;
     grid-auto-rows: max-content;
@@ -213,7 +213,7 @@ main {
 }
 
 .knowledge__picture {
-    max-width: 500px;
+    /* max-width: 500px; */
     margin: 0 0 0 auto;
 }
 
@@ -378,7 +378,7 @@ main {
     align-items: center;
 }
 .testimony__texts {
-    max-width: 700px;
+    /* max-width: 700px; */
 }
 
 .testimony__course {
@@ -485,7 +485,7 @@ main {
 .go-top-container {
     position: fixed;
     bottom: 1rem;
-    right: -3rem;
+    right: 3rem;
     width: 6.6rem;
     height: 6.6rem;
     z-index: -1;
@@ -517,8 +517,15 @@ main {
 
 .show {
     z-index: 10;
+    margin: 0;
+    /* right: 0; */
 }
-
+.go-top-container .show {
+    margin: 2rem;
+    width: 0;
+    height: 0;
+    background-color: red;
+}
 .show .go-top-button {
     animation: popup .3s ease-in-out;
     width: 3.6rem;
@@ -645,7 +652,7 @@ main {
     .nav__close {
         position: absolute;
         top: 30px;
-        right: 30px;
+        right: 70px;
         width: 4rem;
         cursor: pointer;
     }
@@ -705,10 +712,6 @@ main {
         display: flex;
         align-items: center;
         justify-content: center;
-    }
-    .show .go-top-button {
-        width: 5rem;
-        height: 5rem;
     }
 
 }
@@ -775,65 +778,84 @@ main {
 
 
     /* - - - - - M E D I A  3 0 0 P X - - - - -*/
-    @media (max-width:300px) {
+    @media (max-width:400px) {
         html {
-            width: 100vh;
-        }
-        .hero__title {
-            font-size: 2rem;
-        }
-        .hero__paragraph {
-            font-size: 1rem;
-        }
-        .hero::before {
-            background-position: center center;
-        }
-        .subtitle {
-            font-size: 1.8rem;
-        }
-        .price__element {
-            width: 90%;
-        }
-        .price__element--best {
-            width: 90%;
-            padding: 40px;
-        }
-        .plan__price {
-            font-size: 2rem;
-        }
-        .testimony {
-            --pading-container: 60px 0;
-        }
-        .testimony__container {
-            grid-template-columns: 28px 1fr 28px;
-            gap: .9em;
-        }
-        .testimony__arrow {
             width: 100%;
         }
-        .testimony__course {
-            margin-top: 15px;
-        }
-        .questions__title {
-            font-size: 1rem;
-        }
-        .nav--footer {
+        .knowledge__texts {
+            width: 90%;
             padding: 0;
-            margin-bottom: 40px;
         }
-        .footer__title {
-            justify-self: center;
-            margin-bottom: 15px;
+        .knowledge__container {
+            padding: 0rem;
         }
-        .nav--footer {
-            padding-bottom: 60px;
+        .subtitle {
+            align-items: center;
+            justify-content: center;
         }
-        .footer__container {
-            margin-bottom: 0;
+        .go-top-container {
+            right: 0rem;
+        }
+        .show .go-top-button {
+            width: 3.5rem;
+            height: 3.5rem;
+            margin: 0;
+        }
+        .nav__title {
+            display: none;
+        }
+    }
+
+
+    /* - - - - - M E D I A  2 5 0 P X - - - - -*/
+    @media (max-width:400px) {
+        html {
+            width: 100%;
+        }
+        .cta {
+            width: auto;
+        }
+        .about__paragraph {
+            max-width: 200px;
+        }
+        .about__icons {
+            margin: 0;
+        }
+        .container {
+            margin: 0 auto;
+            justify-content: center;
+        }
+        main {
+            align-items: center;
+        }
+        .about__paragraph {
+            margin: 0 auto;
+        }
+        .knowledge__texts {
+            width: 90%;
             padding: 0;
-            padding-top: 3rem;
         }
-        .testimony__container {
-            grid-template-columns: 50px 1fr 50px;
+        .knowledge__container {
+            padding: 0rem;
+        }
+        .subtitle {
+            align-items: center;
+            justify-content: center;
+        }
+        .go-top-container {
+            right: 2rem;
+        }
+        .show .go-top-button {
+            width: 3.5rem;
+            height: 3.5rem;
+            margin: 0;
+        }
+        .nav__title {
+            display: none;
+        }
+        .hero__title {
+            margin: 0 auto;
+            font-size: 1.5rem;
+            margin-right: 1rem;
         }
     }
