--- a/css/estilos.css
+++ b/css/estilos.css
@@ -254,10 +254,12 @@ main {
     place-items: center;
 }
 .price__element {
-    background-color: rgb(255, 157, 190);
+    /* background-color: rgb(255, 157, 190); */
+    background: rgb(255,157,190);
+    background: linear-gradient(3deg, rgba(255,157,190,1) 0%, rgba(185,66,178,1) 100%);
     text-align: center;
     border-radius: 10px;
-    width: 330px;
+    width: 300;
     padding: 40px;
     --color-plan: #000000;
     --color-price: #fff;
@@ -295,6 +297,7 @@ main {
     padding: 0.6rem 1rem;
     border-radius: 0.5rem;
     font-weight: bold;
+    color: #6e6e6e;
 }
 .plan__price {
     font-size: 2.5rem;
