--- a/css/estilos.css
+++ b/css/estilos.css
@@ -297,7 +297,7 @@ main {
     padding: 0.6rem 1rem;
     border-radius: 0.5rem;
     font-weight: bold;
-    color: #6e6e6e;
+    color: #ffffff;
 }
 .plan__price {
     font-size: 2.5rem;
