cambio favicon y text aling footer h2

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -763,6 +763,7 @@ main {
     }
     .footer__title {
         justify-self: center;
+        text-align: center;
         margin-bottom: 15px;
         width: min-content;
     }
