--- a/css/estilos.css
+++ b/css/estilos.css
@@ -169,14 +169,15 @@ main {
 }
 
 .about__main {
+    width: 90%;
+    gap: 1.5rem;
     padding-top: 60px;
     display: grid;
-    width: 90%;
     margin: 0 auto;
-    gap: 1.5rem;
     overflow: hidden;
     grid-template-columns: repeat(auto-fit, minmax(260px, auto));
     grid-template-rows: auto;
+    place-items: center;
 }
 
 .about__icons {
