--- a/css/estilos.css
+++ b/css/estilos.css
@@ -211,6 +211,7 @@ main {
     gap: 1em;
     align-items: center;
     padding: 4rem;
+    place-content: center;
     /* justify-content: center; */
 }
 
@@ -223,7 +224,9 @@ main {
     line-height: 1.7;
     margin-bottom: 15px;
 }
-
+.knowledge__texts {
+    margin: 0 auto;
+}
 .knowledge__img {
     width: 100%;
     /* height: 20%; */
@@ -897,6 +900,6 @@ main {
             margin-right: 1rem;
         }
         html {
-            background-color: blueviolet;
+            background-color: rgb(196, 164, 226);
         }
     }
