--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,14 +38,32 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(#e2a8a875 0%, #aa69697c 100%), url(../images/fondohero.jpg);
+    /* background-image: linear-gradient(#e2a8a875 0%, #aa69697c 100%), url(../images/fondohero.jpg);
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%); */
     z-index: -1;
 }
-
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+}
+.capa {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1c1d;
+    opacity: .1;
+    /* mix-blend-mode: overlay; */
+}
 /*- - - - N A V - - - - -*/
 .nav {
     --pading-container: 0;
