--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,6 +62,7 @@ video {
     height: 100%;
     background-color: #1c1c1d;
     opacity: .1;
+    mix-blend-mode: lighten;
     /* mix-blend-mode: overlay; */
 }
 /*- - - - N A V - - - - -*/
