--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,6 +24,7 @@ body {
 .hero {
     width: 100%;
     height: 100vh;
+    /* min-width: 600px; */
     max-height: 800px;
     position: relative;
     display: grid;
@@ -38,12 +39,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-image: linear-gradient(#e2a8a875 0%, #aa69697c 100%), url(../images/fondohero.jpg);
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%); */
-    z-index: -1;
+    z-index: -4;
 }
 video {
     position: absolute;
@@ -112,12 +108,12 @@ video {
 
 .nav__close {
     display: var(--show, none);
-    z-index: 1;
+    z-index: 6;
 }
-
 /*- - - - - H E R O   CONTAINER- - - - -*/
 
 .hero__container {
+    /* max-width: 800px; */
     --padding-container: 0;
     display: grid;
     grid-auto-rows: max-content;
@@ -126,7 +122,6 @@ video {
     padding-bottom: 100px;
     text-align: center;
 }
-
 .hero__title {
     font-size: 2.5rem;
     text-transform: uppercase;
@@ -137,6 +132,7 @@ video {
     justify-self: center;
     color: #fff;
     text-transform: uppercase;
+    /* color: rgb(22, 11, 15); */
     text-decoration: none;
     font-weight: bold;
     padding: 13px 30px;
@@ -146,11 +142,14 @@ video {
 #comienzaahora {
     background-color: rgba(216, 112, 147, 0.705);
 }
+
 main {
     margin: 0 auto;
     width: 100%;
 }
+
 /*- - - - - A B O U T - - - - -*/
+
 .about {
     text-align: center;
 }
@@ -166,9 +165,11 @@ main {
     text-transform: uppercase;
     text-align: center;
 }
+
 .about__paragraph {
     line-height: 1.7;
 }
+
 .about__main {
     width: 90%;
     gap: 1.5rem;
@@ -180,6 +181,7 @@ main {
     grid-template-rows: auto;
     place-items: center;
 }
+
 .about__icons {
     display: grid;
     gap: 1em;
@@ -188,18 +190,22 @@ main {
     overflow: hidden;
     margin: 0 auto;
 }
+
 .about__icon {
     width: 5rem;
 }
+
 /*- - - - K N O W L E D G E - - - - - */
 
 .knowledge {
+    /* min-width: 600px; */
     background-color: #fff;
      background-size: 20px 20px;
     background-position: 0 0,10px 10px;
     margin: 0 auto;
     overflow: hidden;
 }
+
 .knowledge__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -207,10 +213,14 @@ main {
     align-items: center;
     padding: 4rem;
     place-content: center;
+    /* justify-content: center; */
 }
+
 .knowledge__picture {
+    /* max-width: 500px; */
     margin: 0 0 0 auto;
 }
+
 .knowledge__paragraph {
     line-height: 1.7;
     margin-bottom: 15px;
@@ -220,8 +230,11 @@ main {
 }
 .knowledge__img {
     width: 100%;
+    /* height: 20%; */
     display: flex;
+    /* justify-content: flex-end; */
     border-radius: 5rem;
+
 }
 
 /* - - - - P R I C E - - - - - */
@@ -229,6 +242,15 @@ main {
 .price {
     text-align: center;
 }
+
+/* .price__table {
+    padding-top: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2.5em;
+    justify-content: space-evenly;
+    align-items: center;
+} */
 .price__table {
     padding-top: 60px;
     display: grid;
@@ -238,6 +260,7 @@ main {
     place-items: center;
 }
 .price__element {
+    /* background-color: rgb(255, 157, 190); */
     background: rgb(255,157,190);
     background: linear-gradient(3deg, rgba(255,157,190,1) 0%, rgba(185,66,178,1) 100%);
     text-align: center;
@@ -259,6 +282,18 @@ main {
 .price__element--cocolor {
     background-color: violet;
 }
+/* .price__element--best {
+    width: 370px;
+    padding: 60px 40px;
+    background-color: palevioletred;
+    --color-plan: rgba(0, 0, 0, 0.75);
+    --color-price: #fff;
+    --bg-cta: #ffffffd5;
+    --color-cta: palevioletred;
+    --color-items: #FFF;
+    background: rgb(255,255,255);
+background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 100%);
+} */
 .price__name {
     color: var(--color-plan);
     margin-bottom: 15px;
@@ -285,6 +320,7 @@ main {
     margin-bottom: 50px;
     color: var(--color-items);
 }
+
 .price__cta {
     display: block;
     padding: 20px 0;
@@ -307,6 +343,7 @@ main {
 /*- - - - - T E S T I M O N Y - - - - -*/
 
 .testimony {
+    /* background-color: #02027a; */
     justify-content: center;
 }
 
@@ -316,6 +353,7 @@ main {
     gap: 1em;
     align-items: center;
     justify-content: center;
+    /* margin: 0 auto; */
 
 }
 
@@ -330,6 +368,7 @@ main {
     opacity: 0 ;
     pointer-events: none;
 }
+
 .testimony__body--show {
     pointer-events: unset;
     opacity: 1;
@@ -341,18 +380,22 @@ main {
     border-radius: 50%;
     object-fit: cover;
     margin: 0 auto;
+    /* display: none; */
 }
+
 .testimony__picture {
     width: 100%;
     justify-content: center;
     align-items: center;
 }
+
 .testimony__course {
     background-color: palevioletred;
     color: #fff;
     display: inline-block;
     padding: 5px;
 }
+
 .testimony__arrow {
     width: 90%;
     cursor: pointer;
@@ -369,6 +412,7 @@ main {
     align-items: center;
     justify-content: center;
 }
+
 .cta--testimony {
     display: flex;
     justify-content: center;
@@ -380,25 +424,30 @@ main {
 .questions {
     text-align: center;
 }
+
 .questions__container {
     display: grid;
     gap: 2em;
     padding-top: 50px;
     padding-bottom: 100px;
 }
+
 .questions__padding {
     padding: 0;
     transition: padding .3s;
     border: 1px solid palevioletred;
     border-radius: 6px;
 }
+
 .questions__padding--add {
     padding-bottom: 30px;
 }
+
 .questions__answer {
     padding: 0 30px 0;
     overflow: hidden;
 }
+
 .questions__title {
     text-align: left;
     display: flex;
@@ -408,6 +457,7 @@ main {
     color: var(--color-title);
     justify-content: space-between;
 }
+
 .questions__arrow {
     border-radius: 50%;
     background-color: palevioletred;
@@ -419,22 +469,29 @@ main {
     margin-left: 10px;
     transition: transform .3s;
 }
+
 .questions__arrow--rotate {
     transform: rotate(180deg);
 }
+
 .questions__show {
     text-align: left;
     height: 0;
     transition: height .3s;
 }
+
 .questions__img {
     display: block;
 }
+
 .questions__copy {
     width: 60%;
     margin: 0 auto;
     margin-bottom: 30px;
 }
+
+
+
 
 /* - - - B O T O N D E S U B I R - - -*/
 
@@ -446,6 +503,7 @@ main {
     height: 6.6rem;
     z-index: -1;
 }
+
 .go-top-button {
     width: 0rem;
     height: 0rem;
@@ -459,6 +517,7 @@ main {
     transform: translate(-50%, -50%);
     z-index: -1;
 }
+
 .go-top-button i {
     position: absolute;
     font-size: 1.7rem;
@@ -468,9 +527,11 @@ main {
     color: white;
     transition: .2s;
 }
+
 .show {
     z-index: 10;
     margin: 0;
+    /* right: 0; */
 }
 .go-top-container .show {
     margin: 2rem;
@@ -484,9 +545,12 @@ main {
     height: 3.6rem;
     z-index: 11;
 }
+
 .show i {
     transform: translate(-50%, -50%) scale(1);
+
 }
+
 @keyframes popup{
     0% {
         width: 0rem;
@@ -506,19 +570,24 @@ main {
 .footer {
     background-color: palevioletred;
     width: 100%;
+    /* min-width: 60rem; */
 }
+
 .footer__title {
     font-weight: 300;
     font-size: 2rem; 
     color: #fff;
     margin-bottom: 30px;
 }
+
 .footer__container {
     display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid #fff;
+    /* padding-bottom: 60px; */
 }
+
 .nav--footer {
     padding-bottom: 20px;
     display: grid;
@@ -527,21 +596,26 @@ main {
     height: 100%;
     justify-content: space-around;
 }
+
 .footer__copy {
     --pading-container: 30px 0;
     text-align: center;
     color: #fff;
     background-color: palevioletred;
 }
+
 .footer__copyright {
     font-weight: 300;
 }
+
 .footer__icons {
     margin-bottom: 10px;
 }
+
 .footer__img {
     width: 30px;
 }
+
 .footer__container {
     flex-wrap: wrap;
     width: 100%;
@@ -584,13 +658,16 @@ main {
         --show: block;
         opacity: 1;
         pointer-events: unset;
+        z-index: 5;
     }
     .nav__close {
         position: absolute;
         top: 30px;
-        right: 2px;
+        right: 10px;
         width: 4rem;
         cursor: pointer;
+        z-index: 6;
+
     }
     .nav__img {
         width: 4rem;
@@ -641,6 +718,7 @@ main {
         height: 125px;
         margin: 0 auto;
         margin-left: calc(50% - 62.5px);
+        /* display: none; */
     }
     .questions__copy {
         width: 100%;
@@ -664,6 +742,13 @@ main {
     .subtitle {
         font-size: 1.8rem;
     }
+    .price__element {
+        /* width: 90%; */
+    }
+    /* .price__element--best {
+        width: 90%;
+        padding: 40px;
+    } */
     .plan__price {
         font-size: 2rem;
     }
@@ -725,6 +810,9 @@ main {
         .knowledge__container {
             padding: 0rem;
         }
+        .subtitle {
+            /* margin-left: 5rem; */
+        }
         .subtitle-testimony {
             width: 15rem;
             text-align: center;
@@ -758,6 +846,7 @@ main {
         }
         .about__main {
             grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+        
         }
         .about__paragraph {
             max-width: 200px;
