--- a/css/modal.css
+++ b/css/modal.css
@@ -110,7 +110,13 @@
     background-color: rgb(161, 84, 110);
 }
 
+
+
 /*- - - - - V E N  T A N A   M O D A L   P O L Y G E L - - - -  -*/
+
+
+
+
 
 #btn-modal--polygel{
     display: none;
@@ -178,7 +184,15 @@
 }
 /*:::Fin Ventana Modal:::*/
 
+
+
+
+
+
+
+
 /*- - - - - - B O T O N   M O D A L   A C R I L I C A  S   - - - - - - */
+
 
 /*:::Boton-Modal:::*/
 .boton-modal--acrilicas{
@@ -200,7 +214,13 @@
     background-color: rgb(161, 84, 110);
 }
 
+
+
 /*- - - - - V E N  T A N A   M O D A L   A C R I L I C A S - - - -  -*/
+
+
+
+
 
 #btn-modal--acrilicas{
     display: none;
@@ -270,7 +290,14 @@
 }
 /*:::Fin Ventana Modal:::*/
 
+
+
+
+
+
+
 /*- - - - - - B O T O N   M O D A L   P E S T A Ñ  A S   - - - - - - */
+
 
 /*:::Boton-Modal:::*/
 .boton-modal--pestanas{
@@ -292,7 +319,15 @@
     background-color: rgb(161, 84, 110);
 }
 
+
+
+
+
+
+
 /*- - - - - V E N  T A N A   M O D A L  P E S T A Ñ A  S - - - -  -*/
+
+
 
 #btn-modal--pestanas{
     display: none;
@@ -360,7 +395,10 @@
 }
 /*:::Fin Ventana Modal:::*/
 
+
+
 /*- - - - - - B O T O N   M O D A L   P E S T A Ñ  A S   - - - - - - */
+
 
 /*:::Boton-Modal:::*/
 .boton-modal--semipermanente{
@@ -382,7 +420,15 @@
     background-color: rgb(161, 84, 110);
 }
 
+
+
+
+
+
+
 /*- - - - - V E N  T A N A   M O D A L  P E S T A Ñ A  S - - - -  -*/
+
+
 
 #btn-modal--semipermanente{
     display: none;
@@ -445,6 +491,8 @@
 }
 
 /*- - - - - V E N  T A N A   M O D A L  P E S T A Ñ A  S  VOLUMEN - - - -  -*/
+
+
 
 #btn-modal--volumen{
     display: none;
@@ -512,7 +560,10 @@
 }
 /*:::Fin Ventana Modal:::*/
 
+
+
 /*- - - - - - B O T O N   M O D A L   P E S T A Ñ  A S   - - - - - - */
+
 
 /*:::Boton-Modal:::*/
 .boton-modal--volumen{
@@ -537,7 +588,10 @@
 /*- - - - -  FIN  V E N  T A N A   M O D A L  P E S T A Ñ A  S - - - -  -*/
 
 
+
 /*- - - - - V E N  T A N A   M O D A L  P E S T A Ñ A  S  L I F T I N G - - - -  -*/
+
+
 
 #btn-modal--lifting{
     display: none;
@@ -605,7 +659,10 @@
 }
 /*:::Fin Ventana Modal:::*/
 
+
+
 /*- - - - - - B O T O N   M O D A L   L I F T I N G    - - - - - - */
+
 
 /*:::Boton-Modal:::*/
 .boton-modal--lifting{
@@ -630,13 +687,18 @@
 /*- - - - -  FIN  V E N  T A N A   M O D A L  L I F T I N G   - - - -  -*/
 
 
+
+
+
 @media screen and (max-width:800px) {
     .content-modal--semipermanente{
         width: 90%;
         text-align: start;
+        /* justify-content: start; */
     }
     .container-modal--semipermanente {
         height: 100%;
+        /* background-color: rgb(182, 111, 111); */
     }
     .content-modal--acrilicas{
         width: 90%;
