--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,9 +56,9 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #1c1c1d;
-    opacity: .1;
-    mix-blend-mode: lighten;
+    /* background-color: #1c1c1d; */
+    /* opacity: .1; */
+    /* mix-blend-mode: lighten; */
     /* mix-blend-mode: overlay; */
     z-index: -2;
 }
