--- a/css/estilos.css
+++ b/css/estilos.css
@@ -218,8 +218,49 @@ main {
 
 .knowledge__picture {
     /* max-width: 500px; */
+    width: 100%;
+    height: 20rem;
     margin: 0 0 0 auto;
+    overflow: hidden;
+    border-radius: 5rem;
+    background-color: red;
 }
+.knowledge__img {
+    width: auto;
+    height: 110%;
+    /* height: 100%; */
+    /* height: 20%; */
+    /* justify-content: flex-end; */
+}
+
+/*---BACKGROUND IMAGE KNOWLEDGE*/
+.acrilicas {
+    background: url(../images/knowledge-acrilicas.png);
+}
+.polygel {
+    background: url(../images/knowledge-polygel.jpg);
+}
+.peloxpelo {
+    background: url(../images/knowledge-pestanas.jpg);
+}
+.softgel {
+    background: url(../images/knowledge-softgel.jpg);
+}
+.semipermanente {
+    background: url(../images/knowledge-semipermanente.jpg);
+}
+.volumenruso {
+    background: url(../images/knowledge-volumenruso.jpg);
+}
+.lifting {
+    background: url(../images/knowledge-lifting.jpg);
+}
+.lifting, .volumenruso, .peloxpelo, .semipermanente, .softgel, .peloxpelo, .polygel, .acrilicas {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+/*---FIN BACKGROUND IMAGE KNOWLEDGE*/
 
 .knowledge__paragraph {
     line-height: 1.7;
@@ -227,14 +268,6 @@ main {
 }
 .knowledge__texts {
     margin: 0 auto;
-}
-.knowledge__img {
-    width: 100%;
-    /* height: 20%; */
-    display: flex;
-    /* justify-content: flex-end; */
-    border-radius: 5rem;
-
 }
 
 /* - - - - P R I C E - - - - - */
